--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Manish Kumar's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Manish Kumar
+description: M.Tech student of Quantum computing at IISc Bengaluru
