--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Manish Kumar
 description: M.Tech student of Quantum computing at IISc Bengaluru
+image: assets/manish_BG-white.png
