--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : 
   googlescholar    : #https://scholar.google.com/citations?user=C4HtUnEAAAAJ&hl=en
   email            : manishkumar7[at]iisc.ac.in
-  researchgate     : https://www.researchgate.net/profile/Manish-Kumar-41
+
   uri              :
   bitbucket        :
   codepen          :
@@ -106,7 +106,7 @@ author:
   # orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : https://physics.stackexchange.com/users/145687/108-mk
+  stackexchange    : https://physics.stackexchange.com/users/145687/108-mk
   steam            :
   tumblr           :
   twitter          : #"replacethistwitterhandle"
@@ -114,7 +114,8 @@ author:
   weibo            :
   xing             :
   youtube          :
-  wikipedia        : https://en.wikipedia.org/wiki/User:108_mk
+  wikipedia        : en.wikipedia.org/wiki/User:108_mk
+  researchgate     : https://www.researchgate.net/profile/Manish-Kumar-41
 
 
 # Reading Files
