--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   # orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : https://stackoverflow.com/users/10154356/108-mk?tab=profile
+  stackoverflow    : 10154356
   steam            :
   tumblr           :
   twitter          : #"replacethistwitterhandle"
